--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
-        <uses-library
-            android:name="com.google.android.wearable"
-            android:required="true" />
 
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+        <uses-library
+            android:name="com.google.android.wearable"
+            android:required="true" />
+
         <activity
-            android:name=".activites.MainActivity"
+            android:name=".activities.ChatActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
