--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.theokanning.openai-gpt3-java:service:0.11.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
