--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.wear:wear-input:1.1.0'
     implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
