--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,7 @@ android {
 }
 
 dependencies {
-
     implementation 'com.google.android.gms:play-services-wearable:18.0.0'
-    implementation 'androidx.percentlayout:percentlayout:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'androidx.wear:wear:1.2.0'
     implementation 'androidx.wear:wear-input:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -38,6 +34,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.2.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.mlkit:language-id:17.0.4'
 
     implementation 'com.theokanning.openai-gpt3-java:service:0.15.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
