--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'com.android.application'
+
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+    // Add the Crashlytics Gradle plugin
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -10,8 +15,8 @@ android {
         applicationId 'net.devemperor.wristassist'
         minSdk 26
         targetSdk 34
-        versionCode 18
-        versionName "2.2.0"
+        versionCode 19
+        versionName "2.2.1"
     }
 
     buildTypes {
@@ -41,4 +46,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+
+    implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
+    implementation("com.google.firebase:firebase-crashlytics")
 }
