added google-service.json (not on GH)

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ deploymentTargetDropDown.xml
 app/release/app-release.aab
 app/release/app-release.apk
 app/release/output-metadata.json
+google-services.json
