--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
             android:name=".activities.InputActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.ChangelogActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Starting">
