--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.mlkit:language-id:17.0.4'
     implementation 'androidx.core:core-splashscreen:1.0.1'
+    implementation 'androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.1'
 
     implementation 'com.theokanning.openai-gpt3-java:service:0.16.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
