--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:name=".activities.EditChatActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.UsageActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.SettingsActivity"
             android:exported="false" />
         <activity
@@ -68,6 +71,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
