--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,14 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.1'
 
-    implementation 'com.theokanning.openai-gpt3-java:service:0.16.1'
+    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'commons-validator:commons-validator:1.7'
+    implementation 'com.jsibbold:zoomage:1.3.1'
+    implementation 'com.github.kenglxn.QRGen:android:3.0.1'
+    implementation 'com.squareup.picasso:picasso:2.8'
 
     implementation 'io.noties.markwon:core:4.6.2'
     implementation 'io.noties.markwon:ext-strikethrough:4.6.2'
