--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,6 @@
             <meta-data
                 android:name="android.support.wearable.complications.SUPPORTED_TYPES"
                 android:value="SMALL_IMAGE,MONOCHROMATIC_IMAGE,LONG_TEXT" />
-
             <meta-data
                 android:name="android.support.wearable.complications.UPDATE_PERIOD_SECONDS"
                 android:value="0" />
@@ -49,6 +48,18 @@
             android:exported="false" />
         <activity
             android:name=".activities.EditChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CreateImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.OpenImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.QRCodeActivity"
             android:exported="false" />
         <activity
             android:name=".activities.UsageActivity"
@@ -71,7 +82,6 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
-            android:launchMode="singleInstance"
             android:theme="@style/Theme.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
