--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -85,7 +86,11 @@
             android:exported="false"
             android:taskAffinity="" />
         <activity
-            android:name=".activities.InputActivity"
+            android:name=".activities.InputTypeActivity"
+            android:exported="false"
+            android:taskAffinity="" />
+        <activity
+            android:name=".activities.InputWhisperActivity"
             android:exported="false"
             android:taskAffinity="" />
         <activity
